finish authorizatoin part
