# internal/models/http/model_empty_struct.go
@@ -1,0 +1,3 @@
+package httpModels
+
+type EmptyStruct struct{}
