# internal/models/http/model_get_actors_response.go
@@ -1,0 +1,6 @@
+package httpModels
+
+type GetActorsResponse struct {
+	Actor        *ActorResponse         `json:"actor,omitempty"`
+	ActedInFilms []MovieWithoutCastList `json:"actedInFilms,omitempty"`
+}
