# internal/models/http/model_http_error.go
@@ -1,0 +1,5 @@
+package httpModels
+
+type HttpError struct {
+	Message string `json:"message,omitempty"`
+}
