# internal/models/http/model_movie_with_id_cast.go
@@ -1,0 +1,9 @@
+package httpModels
+
+type MovieWithIdCast struct {
+	Title       string  `json:"title"`
+	Description string  `json:"description"`
+	ReleaseDate string  `json:"releaseDate"`
+	Rating      float32 `json:"rating"`
+	CastIDList  []int32 `json:"castIDList"`
+}
